# sdl2-boilerplate

./: CMakeLists.txt
sdl2-boilerplate/src/: main.c
